// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadPlotConfig Loads config properly 1`] = `
{
  "config": {
    "axes": {
      "domainWidth": 2,
      "gridOpacity": 0,
      "gridWidth": 10,
      "labelFontSize": 12,
      "offset": 0,
      "titleFontSize": 13,
      "xAxisRotateLabels": false,
      "xAxisText": "#UMIs in cell",
      "yAxisText": "#UMIs * #Cells",
    },
    "axesRanges": {
      "xAxisAuto": true,
      "xMax": 10,
      "xMin": 0,
      "yAxisAuto": true,
      "yMax": 10,
      "yMin": 0,
    },
    "colour": {
      "gradient": "default",
      "invert": "standard",
      "masterColour": "#000000",
      "reverseColourBar": false,
      "toggleInvert": "#FFFFFF",
    },
    "dimensions": {
      "height": 400,
      "width": 530,
    },
    "fontStyle": {
      "colour": "#000000",
      "font": "sans-serif",
    },
    "labels": {
      "enabled": true,
      "size": 18,
    },
    "legend": {
      "colour": "#000000",
      "enabled": true,
      "position": "right",
      "showAlert": false,
    },
    "marker": {
      "opacity": 5,
      "shape": "circle",
      "showOpacity": true,
      "size": 5,
    },
    "minCellSize": 10800,
    "spec": "1.0.0",
    "title": {
      "anchor": "start",
      "dx": 10,
      "fontSize": 20,
      "text": "",
    },
  },
  "error": false,
  "experimentId": "testae48e318dab9a1bd0bexperiment",
  "loading": false,
  "outstandingChanges": false,
  "plotData": [
    1,
    2,
    3,
    4,
  ],
  "plotType": "cellSizeDistributionHistogram",
}
`;

exports[`loadPlotConfig Loads default initial config for plots if plot config is not found 1`] = `
{
  "config": {
    "axes": {
      "domainWidth": 2,
      "gridOpacity": 0,
      "gridWidth": 10,
      "labelFontSize": 12,
      "offset": 0,
      "titleFontSize": 13,
      "xAxisRotateLabels": false,
      "xAxisText": "#UMIs in cell",
      "yAxisText": "#UMIs * #Cells",
    },
    "axesRanges": {
      "xAxisAuto": true,
      "xMax": 10,
      "xMin": 0,
      "yAxisAuto": true,
      "yMax": 10,
      "yMin": 0,
    },
    "colour": {
      "gradient": "default",
      "invert": "standard",
      "masterColour": "#000000",
      "reverseColourBar": false,
      "toggleInvert": "#FFFFFF",
    },
    "dimensions": {
      "height": 400,
      "width": 530,
    },
    "fontStyle": {
      "colour": "#000000",
      "font": "sans-serif",
    },
    "labels": {
      "enabled": true,
      "size": 18,
    },
    "legend": {
      "colour": "#000000",
      "enabled": true,
      "position": "right",
      "showAlert": false,
    },
    "marker": {
      "opacity": 5,
      "shape": "circle",
      "showOpacity": true,
      "size": 5,
    },
    "minCellSize": 10800,
    "spec": "1.0.0",
    "title": {
      "anchor": "start",
      "dx": 10,
      "fontSize": 20,
      "text": "",
    },
  },
  "error": false,
  "experimentId": "testae48e318dab9a1bd0bexperiment",
  "loading": false,
  "outstandingChanges": false,
  "plotData": [],
  "plotType": "cellSizeDistributionHistogram",
}
`;
